<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/event"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/birthday"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/holiday"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/event"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_birthdays"
            android:icon="@drawable/birthday"
            android:title="@string/menu_birthdays" />
        <item
            android:id="@+id/nav_holidays"
            android:icon="@drawable/holiday"
            android:title="@string/menu_holidays" />
    </group>
</menu>